fix error in example

--- a/example.ipynb
+++ b/example.ipynb
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1305,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1323,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1343,7 +1343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1353,14 +1353,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 11/11 [03:28<00:00, 18.99s/it]\n"
+      "100%|██████████| 11/11 [01:41<00:00,  9.20s/it]\n"
      ]
     }
    ],
@@ -1398,16 +1398,16 @@
     "        \"test_neg_count\": test_bw_neg,\n",
     "        \"valid_count\": valid_bw,\n",
     "        \"valid_pos_count\": valid_bw_pos,\n",
-    "        \"valid_neg_count\": test_bw_neg,\n",
+    "        \"valid_neg_count\": valid_bw_neg,\n",
     "        \"total_count\": train_bw + test_bw + valid_bw,\n",
     "        \"total_pos_count\": train_bw_pos + test_bw_pos + valid_bw_pos,\n",
-    "        \"total_neg_count\": train_bw_neg + test_bw_neg + test_bw_neg,\n",
+    "        \"total_neg_count\": train_bw_neg + test_bw_neg + valid_bw_neg,\n",
     "    }\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1420,7 +1420,7 @@
       "Test examples with bad words 132\n",
       "Valid examples with bad words 48\n",
       "Positive bad words 350\n",
-      "Negatibe bad words 234\n",
+      "Negatibe bad words 200\n",
       "\n",
       "\n",
       "-----one_liners------\n",
@@ -1429,7 +1429,7 @@
       "Test examples with bad words 123\n",
       "Valid examples with bad words 59\n",
       "Positive bad words 491\n",
-      "Negatibe bad words 122\n",
+      "Negatibe bad words 114\n",
       "\n",
       "\n",
       "-----onion_or_not------\n",
@@ -1438,7 +1438,7 @@
       "Test examples with bad words 405\n",
       "Valid examples with bad words 223\n",
       "Positive bad words 735\n",
-      "Negatibe bad words 1449\n",
+      "Negatibe bad words 1331\n",
       "\n",
       "\n",
       "-----pun_of_the_day------\n",
@@ -1447,7 +1447,7 @@
       "Test examples with bad words 6\n",
       "Valid examples with bad words 1\n",
       "Positive bad words 10\n",
-      "Negatibe bad words 17\n",
+      "Negatibe bad words 13\n",
       "\n",
       "\n",
       "-----reddit_jokes_last_laught------\n",
@@ -1456,7 +1456,7 @@
       "Test examples with bad words 133\n",
       "Valid examples with bad words 122\n",
       "Positive bad words 2554\n",
-      "Negatibe bad words 1464\n",
+      "Negatibe bad words 1468\n",
       "\n",
       "\n",
       "-----semeval_2017_task_7------\n",
@@ -1465,7 +1465,7 @@
       "Test examples with bad words 4\n",
       "Valid examples with bad words 4\n",
       "Positive bad words 15\n",
-      "Negatibe bad words 10\n",
+      "Negatibe bad words 11\n",
       "\n",
       "\n",
       "-----semeval_2021_task_7------\n",
@@ -1474,7 +1474,7 @@
       "Test examples with bad words 69\n",
       "Valid examples with bad words 116\n",
       "Positive bad words 701\n",
-      "Negatibe bad words 82\n",
+      "Negatibe bad words 94\n",
       "\n",
       "\n",
       "-----unfun_me------\n",
@@ -1492,7 +1492,7 @@
       "Test examples with bad words 5148\n",
       "Valid examples with bad words 2558\n",
       "Positive bad words 25905\n",
-      "Negatibe bad words 7164\n",
+      "Negatibe bad words 6362\n",
       "\n",
       "\n",
       "-----the_naughtyformer------\n",
@@ -1501,7 +1501,7 @@
       "Test examples with bad words 4139\n",
       "Valid examples with bad words 2099\n",
       "Positive bad words 19722\n",
-      "Negatibe bad words 1182\n",
+      "Negatibe bad words 1073\n",
       "\n",
       "\n",
       "-----meta_dataset------\n",
@@ -1510,7 +1510,7 @@
       "Test examples with bad words 500\n",
       "Valid examples with bad words 474\n",
       "Positive bad words 2274\n",
-      "Negatibe bad words 457\n",
+      "Negatibe bad words 467\n",
       "\n",
       "\n"
      ]
@@ -1533,14 +1533,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'funlines_and_human_microedit_paper_2023': {'train_count': 370, 'train_pos_count': 242, 'train_neg_count': 128, 'test_count': 132, 'test_pos_count': 79, 'test_neg_count': 53, 'valid_count': 48, 'valid_pos_count': 29, 'valid_neg_count': 53, 'total_count': 550, 'total_pos_count': 350, 'total_neg_count': 234}, 'one_liners': {'train_count': 423, 'train_pos_count': 337, 'train_neg_count': 86, 'test_count': 123, 'test_pos_count': 105, 'test_neg_count': 18, 'valid_count': 59, 'valid_pos_count': 49, 'valid_neg_count': 18, 'total_count': 605, 'total_pos_count': 491, 'total_neg_count': 122}, 'onion_or_not': {'train_count': 1438, 'train_pos_count': 507, 'train_neg_count': 931, 'test_count': 405, 'test_pos_count': 146, 'test_neg_count': 259, 'valid_count': 223, 'valid_pos_count': 82, 'valid_neg_count': 259, 'total_count': 2066, 'total_pos_count': 735, 'total_neg_count': 1449}, 'pun_of_the_day': {'train_count': 16, 'train_pos_count': 7, 'train_neg_count': 9, 'test_count': 6, 'test_pos_count': 2, 'test_neg_count': 4, 'valid_count': 1, 'valid_pos_count': 1, 'valid_neg_count': 4, 'total_count': 23, 'total_pos_count': 10, 'total_neg_count': 17}, 'reddit_jokes_last_laught': {'train_count': 3767, 'train_pos_count': 2389, 'train_neg_count': 1378, 'test_count': 133, 'test_pos_count': 90, 'test_neg_count': 43, 'valid_count': 122, 'valid_pos_count': 75, 'valid_neg_count': 43, 'total_count': 4022, 'total_pos_count': 2554, 'total_neg_count': 1464}, 'semeval_2017_task_7': {'train_count': 18, 'train_pos_count': 10, 'train_neg_count': 8, 'test_count': 4, 'test_pos_count': 3, 'test_neg_count': 1, 'valid_count': 4, 'valid_pos_count': 2, 'valid_neg_count': 1, 'total_count': 26, 'total_pos_count': 15, 'total_neg_count': 10}, 'semeval_2021_task_7': {'train_count': 610, 'train_pos_count': 536, 'train_neg_count': 74, 'test_count': 69, 'test_pos_count': 65, 'test_neg_count': 4, 'valid_count': 116, 'valid_pos_count': 100, 'valid_neg_count': 4, 'total_count': 795, 'total_pos_count': 701, 'total_neg_count': 82}, 'unfun_me': {'train_count': 41, 'train_pos_count': 30, 'train_neg_count': 11, 'test_count': 7, 'test_pos_count': 5, 'test_neg_count': 2, 'valid_count': 5, 'valid_pos_count': 3, 'valid_neg_count': 2, 'total_count': 53, 'total_pos_count': 38, 'total_neg_count': 15}, 'short_jokes': {'train_count': 24561, 'train_pos_count': 20525, 'train_neg_count': 4036, 'test_count': 5148, 'test_pos_count': 3584, 'test_neg_count': 1564, 'valid_count': 2558, 'valid_pos_count': 1796, 'valid_neg_count': 1564, 'total_count': 32267, 'total_pos_count': 25905, 'total_neg_count': 7164}, 'the_naughtyformer': {'train_count': 14557, 'train_pos_count': 13821, 'train_neg_count': 736, 'test_count': 4139, 'test_pos_count': 3916, 'test_neg_count': 223, 'valid_count': 2099, 'valid_pos_count': 1985, 'valid_neg_count': 223, 'total_count': 20795, 'total_pos_count': 19722, 'total_neg_count': 1182}, 'meta_dataset': {'train_count': 1767, 'train_pos_count': 1502, 'train_neg_count': 265, 'test_count': 500, 'test_pos_count': 404, 'test_neg_count': 96, 'valid_count': 474, 'valid_pos_count': 368, 'valid_neg_count': 96, 'total_count': 2741, 'total_pos_count': 2274, 'total_neg_count': 457}}\n"
+      "{'funlines_and_human_microedit_paper_2023': {'train_count': 370, 'train_pos_count': 242, 'train_neg_count': 128, 'test_count': 132, 'test_pos_count': 79, 'test_neg_count': 53, 'valid_count': 48, 'valid_pos_count': 29, 'valid_neg_count': 19, 'total_count': 550, 'total_pos_count': 350, 'total_neg_count': 200}, 'one_liners': {'train_count': 423, 'train_pos_count': 337, 'train_neg_count': 86, 'test_count': 123, 'test_pos_count': 105, 'test_neg_count': 18, 'valid_count': 59, 'valid_pos_count': 49, 'valid_neg_count': 10, 'total_count': 605, 'total_pos_count': 491, 'total_neg_count': 114}, 'onion_or_not': {'train_count': 1438, 'train_pos_count': 507, 'train_neg_count': 931, 'test_count': 405, 'test_pos_count': 146, 'test_neg_count': 259, 'valid_count': 223, 'valid_pos_count': 82, 'valid_neg_count': 141, 'total_count': 2066, 'total_pos_count': 735, 'total_neg_count': 1331}, 'pun_of_the_day': {'train_count': 16, 'train_pos_count': 7, 'train_neg_count': 9, 'test_count': 6, 'test_pos_count': 2, 'test_neg_count': 4, 'valid_count': 1, 'valid_pos_count': 1, 'valid_neg_count': 0, 'total_count': 23, 'total_pos_count': 10, 'total_neg_count': 13}, 'reddit_jokes_last_laught': {'train_count': 3767, 'train_pos_count': 2389, 'train_neg_count': 1378, 'test_count': 133, 'test_pos_count': 90, 'test_neg_count': 43, 'valid_count': 122, 'valid_pos_count': 75, 'valid_neg_count': 47, 'total_count': 4022, 'total_pos_count': 2554, 'total_neg_count': 1468}, 'semeval_2017_task_7': {'train_count': 18, 'train_pos_count': 10, 'train_neg_count': 8, 'test_count': 4, 'test_pos_count': 3, 'test_neg_count': 1, 'valid_count': 4, 'valid_pos_count': 2, 'valid_neg_count': 2, 'total_count': 26, 'total_pos_count': 15, 'total_neg_count': 11}, 'semeval_2021_task_7': {'train_count': 610, 'train_pos_count': 536, 'train_neg_count': 74, 'test_count': 69, 'test_pos_count': 65, 'test_neg_count': 4, 'valid_count': 116, 'valid_pos_count': 100, 'valid_neg_count': 16, 'total_count': 795, 'total_pos_count': 701, 'total_neg_count': 94}, 'unfun_me': {'train_count': 41, 'train_pos_count': 30, 'train_neg_count': 11, 'test_count': 7, 'test_pos_count': 5, 'test_neg_count': 2, 'valid_count': 5, 'valid_pos_count': 3, 'valid_neg_count': 2, 'total_count': 53, 'total_pos_count': 38, 'total_neg_count': 15}, 'short_jokes': {'train_count': 24561, 'train_pos_count': 20525, 'train_neg_count': 4036, 'test_count': 5148, 'test_pos_count': 3584, 'test_neg_count': 1564, 'valid_count': 2558, 'valid_pos_count': 1796, 'valid_neg_count': 762, 'total_count': 32267, 'total_pos_count': 25905, 'total_neg_count': 6362}, 'the_naughtyformer': {'train_count': 14557, 'train_pos_count': 13821, 'train_neg_count': 736, 'test_count': 4139, 'test_pos_count': 3916, 'test_neg_count': 223, 'valid_count': 2099, 'valid_pos_count': 1985, 'valid_neg_count': 114, 'total_count': 20795, 'total_pos_count': 19722, 'total_neg_count': 1073}, 'meta_dataset': {'train_count': 1767, 'train_pos_count': 1502, 'train_neg_count': 265, 'test_count': 500, 'test_pos_count': 404, 'test_neg_count': 96, 'valid_count': 474, 'valid_pos_count': 368, 'valid_neg_count': 106, 'total_count': 2741, 'total_pos_count': 2274, 'total_neg_count': 467}}\n"
      ]
     }
    ],
@@ -1558,7 +1558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1568,14 +1568,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 11/11 [04:04<00:00, 22.22s/it]\n"
+      "100%|██████████| 11/11 [02:07<00:00, 11.57s/it]\n"
      ]
     }
    ],
@@ -1613,16 +1613,16 @@
     "        \"test_neg_count\": test_bw_neg,\n",
     "        \"valid_count\": valid_bw,\n",
     "        \"valid_pos_count\": valid_bw_pos,\n",
-    "        \"valid_neg_count\": test_bw_neg,\n",
+    "        \"valid_neg_count\": valid_bw_neg,\n",
     "        \"total_count\": train_bw + test_bw + valid_bw,\n",
     "        \"total_pos_count\": train_bw_pos + test_bw_pos + valid_bw_pos,\n",
-    "        \"total_neg_count\": train_bw_neg + test_bw_neg + test_bw_neg,\n",
+    "        \"total_neg_count\": train_bw_neg + test_bw_neg + valid_bw_neg,\n",
     "    }\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1724,14 +1724,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'funlines_and_human_microedit_paper_2023': {'train_count': 354, 'train_pos_count': 226, 'train_neg_count': 128, 'test_count': 124, 'test_pos_count': 73, 'test_neg_count': 51, 'valid_count': 46, 'valid_pos_count': 27, 'valid_neg_count': 51, 'total_count': 524, 'total_pos_count': 326, 'total_neg_count': 230}, 'one_liners': {'train_count': 363, 'train_pos_count': 283, 'train_neg_count': 80, 'test_count': 107, 'test_pos_count': 91, 'test_neg_count': 16, 'valid_count': 51, 'valid_pos_count': 41, 'valid_neg_count': 16, 'total_count': 521, 'total_pos_count': 415, 'total_neg_count': 112}, 'onion_or_not': {'train_count': 1371, 'train_pos_count': 473, 'train_neg_count': 898, 'test_count': 386, 'test_pos_count': 136, 'test_neg_count': 250, 'valid_count': 203, 'valid_pos_count': 72, 'valid_neg_count': 250, 'total_count': 1960, 'total_pos_count': 681, 'total_neg_count': 1398}, 'pun_of_the_day': {'train_count': 15, 'train_pos_count': 6, 'train_neg_count': 9, 'test_count': 6, 'test_pos_count': 2, 'test_neg_count': 4, 'valid_count': 1, 'valid_pos_count': 1, 'valid_neg_count': 4, 'total_count': 22, 'total_pos_count': 9, 'total_neg_count': 17}, 'reddit_jokes_last_laught': {'train_count': 3395, 'train_pos_count': 2126, 'train_neg_count': 1269, 'test_count': 123, 'test_pos_count': 82, 'test_neg_count': 41, 'valid_count': 112, 'valid_pos_count': 67, 'valid_neg_count': 41, 'total_count': 3630, 'total_pos_count': 2275, 'total_neg_count': 1351}, 'semeval_2017_task_7': {'train_count': 16, 'train_pos_count': 8, 'train_neg_count': 8, 'test_count': 4, 'test_pos_count': 3, 'test_neg_count': 1, 'valid_count': 3, 'valid_pos_count': 1, 'valid_neg_count': 1, 'total_count': 23, 'total_pos_count': 12, 'total_neg_count': 10}, 'semeval_2021_task_7': {'train_count': 544, 'train_pos_count': 489, 'train_neg_count': 55, 'test_count': 63, 'test_pos_count': 59, 'test_neg_count': 4, 'valid_count': 109, 'valid_pos_count': 93, 'valid_neg_count': 4, 'total_count': 716, 'total_pos_count': 641, 'total_neg_count': 63}, 'unfun_me': {'train_count': 37, 'train_pos_count': 27, 'train_neg_count': 10, 'test_count': 6, 'test_pos_count': 4, 'test_neg_count': 2, 'valid_count': 5, 'valid_pos_count': 3, 'valid_neg_count': 2, 'total_count': 48, 'total_pos_count': 34, 'total_neg_count': 14}, 'short_jokes': {'train_count': 22629, 'train_pos_count': 18783, 'train_neg_count': 3846, 'test_count': 4721, 'test_pos_count': 3225, 'test_neg_count': 1496, 'valid_count': 2366, 'valid_pos_count': 1643, 'valid_neg_count': 1496, 'total_count': 29716, 'total_pos_count': 23651, 'total_neg_count': 6838}, 'the_naughtyformer': {'train_count': 13696, 'train_pos_count': 12988, 'train_neg_count': 708, 'test_count': 3863, 'test_pos_count': 3652, 'test_neg_count': 211, 'valid_count': 1982, 'valid_pos_count': 1872, 'valid_neg_count': 211, 'total_count': 19541, 'total_pos_count': 18512, 'total_neg_count': 1130}, 'meta_dataset': {'train_count': 1609, 'train_pos_count': 1373, 'train_neg_count': 236, 'test_count': 465, 'test_pos_count': 371, 'test_neg_count': 94, 'valid_count': 436, 'valid_pos_count': 332, 'valid_neg_count': 94, 'total_count': 2510, 'total_pos_count': 2076, 'total_neg_count': 424}}\n"
+      "{'funlines_and_human_microedit_paper_2023': {'train_count': 354, 'train_pos_count': 226, 'train_neg_count': 128, 'test_count': 124, 'test_pos_count': 73, 'test_neg_count': 51, 'valid_count': 46, 'valid_pos_count': 27, 'valid_neg_count': 19, 'total_count': 524, 'total_pos_count': 326, 'total_neg_count': 198}, 'one_liners': {'train_count': 363, 'train_pos_count': 283, 'train_neg_count': 80, 'test_count': 107, 'test_pos_count': 91, 'test_neg_count': 16, 'valid_count': 51, 'valid_pos_count': 41, 'valid_neg_count': 10, 'total_count': 521, 'total_pos_count': 415, 'total_neg_count': 106}, 'onion_or_not': {'train_count': 1371, 'train_pos_count': 473, 'train_neg_count': 898, 'test_count': 386, 'test_pos_count': 136, 'test_neg_count': 250, 'valid_count': 203, 'valid_pos_count': 72, 'valid_neg_count': 131, 'total_count': 1960, 'total_pos_count': 681, 'total_neg_count': 1279}, 'pun_of_the_day': {'train_count': 15, 'train_pos_count': 6, 'train_neg_count': 9, 'test_count': 6, 'test_pos_count': 2, 'test_neg_count': 4, 'valid_count': 1, 'valid_pos_count': 1, 'valid_neg_count': 0, 'total_count': 22, 'total_pos_count': 9, 'total_neg_count': 13}, 'reddit_jokes_last_laught': {'train_count': 3395, 'train_pos_count': 2126, 'train_neg_count': 1269, 'test_count': 123, 'test_pos_count': 82, 'test_neg_count': 41, 'valid_count': 112, 'valid_pos_count': 67, 'valid_neg_count': 45, 'total_count': 3630, 'total_pos_count': 2275, 'total_neg_count': 1355}, 'semeval_2017_task_7': {'train_count': 16, 'train_pos_count': 8, 'train_neg_count': 8, 'test_count': 4, 'test_pos_count': 3, 'test_neg_count': 1, 'valid_count': 3, 'valid_pos_count': 1, 'valid_neg_count': 2, 'total_count': 23, 'total_pos_count': 12, 'total_neg_count': 11}, 'semeval_2021_task_7': {'train_count': 544, 'train_pos_count': 489, 'train_neg_count': 55, 'test_count': 63, 'test_pos_count': 59, 'test_neg_count': 4, 'valid_count': 109, 'valid_pos_count': 93, 'valid_neg_count': 16, 'total_count': 716, 'total_pos_count': 641, 'total_neg_count': 75}, 'unfun_me': {'train_count': 37, 'train_pos_count': 27, 'train_neg_count': 10, 'test_count': 6, 'test_pos_count': 4, 'test_neg_count': 2, 'valid_count': 5, 'valid_pos_count': 3, 'valid_neg_count': 2, 'total_count': 48, 'total_pos_count': 34, 'total_neg_count': 14}, 'short_jokes': {'train_count': 22629, 'train_pos_count': 18783, 'train_neg_count': 3846, 'test_count': 4721, 'test_pos_count': 3225, 'test_neg_count': 1496, 'valid_count': 2366, 'valid_pos_count': 1643, 'valid_neg_count': 723, 'total_count': 29716, 'total_pos_count': 23651, 'total_neg_count': 6065}, 'the_naughtyformer': {'train_count': 13696, 'train_pos_count': 12988, 'train_neg_count': 708, 'test_count': 3863, 'test_pos_count': 3652, 'test_neg_count': 211, 'valid_count': 1982, 'valid_pos_count': 1872, 'valid_neg_count': 110, 'total_count': 19541, 'total_pos_count': 18512, 'total_neg_count': 1029}, 'meta_dataset': {'train_count': 1609, 'train_pos_count': 1373, 'train_neg_count': 236, 'test_count': 465, 'test_pos_count': 371, 'test_neg_count': 94, 'valid_count': 436, 'valid_pos_count': 332, 'valid_neg_count': 104, 'total_count': 2510, 'total_pos_count': 2076, 'total_neg_count': 434}}\n"
      ]
     }
    ],
