fix error in example

--- a/example.ipynb
+++ b/example.ipynb
@@ -1622,7 +1622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1634,6 +1634,8 @@
       "Train examples with bad words 354\n",
       "Test examples with bad words 124\n",
       "Valid examples with bad words 46\n",
+      "Positive bad words 326\n",
+      "Negatibe bad words 198\n",
       "\n",
       "\n",
       "-----one_liners------\n",
@@ -1641,6 +1643,8 @@
       "Train examples with bad words 363\n",
       "Test examples with bad words 107\n",
       "Valid examples with bad words 51\n",
+      "Positive bad words 415\n",
+      "Negatibe bad words 106\n",
       "\n",
       "\n",
       "-----onion_or_not------\n",
@@ -1648,6 +1652,8 @@
       "Train examples with bad words 1371\n",
       "Test examples with bad words 386\n",
       "Valid examples with bad words 203\n",
+      "Positive bad words 681\n",
+      "Negatibe bad words 1279\n",
       "\n",
       "\n",
       "-----pun_of_the_day------\n",
@@ -1655,6 +1661,8 @@
       "Train examples with bad words 15\n",
       "Test examples with bad words 6\n",
       "Valid examples with bad words 1\n",
+      "Positive bad words 9\n",
+      "Negatibe bad words 13\n",
       "\n",
       "\n",
       "-----reddit_jokes_last_laught------\n",
@@ -1662,6 +1670,8 @@
       "Train examples with bad words 3395\n",
       "Test examples with bad words 123\n",
       "Valid examples with bad words 112\n",
+      "Positive bad words 2275\n",
+      "Negatibe bad words 1355\n",
       "\n",
       "\n",
       "-----semeval_2017_task_7------\n",
@@ -1669,6 +1679,8 @@
       "Train examples with bad words 16\n",
       "Test examples with bad words 4\n",
       "Valid examples with bad words 3\n",
+      "Positive bad words 12\n",
+      "Negatibe bad words 11\n",
       "\n",
       "\n",
       "-----semeval_2021_task_7------\n",
@@ -1676,6 +1688,8 @@
       "Train examples with bad words 544\n",
       "Test examples with bad words 63\n",
       "Valid examples with bad words 109\n",
+      "Positive bad words 641\n",
+      "Negatibe bad words 75\n",
       "\n",
       "\n",
       "-----unfun_me------\n",
@@ -1683,6 +1697,8 @@
       "Train examples with bad words 37\n",
       "Test examples with bad words 6\n",
       "Valid examples with bad words 5\n",
+      "Positive bad words 34\n",
+      "Negatibe bad words 14\n",
       "\n",
       "\n",
       "-----short_jokes------\n",
@@ -1690,6 +1706,8 @@
       "Train examples with bad words 22629\n",
       "Test examples with bad words 4721\n",
       "Valid examples with bad words 2366\n",
+      "Positive bad words 23651\n",
+      "Negatibe bad words 6065\n",
       "\n",
       "\n",
       "-----the_naughtyformer------\n",
@@ -1697,6 +1715,8 @@
       "Train examples with bad words 13696\n",
       "Test examples with bad words 3863\n",
       "Valid examples with bad words 1982\n",
+      "Positive bad words 18512\n",
+      "Negatibe bad words 1029\n",
       "\n",
       "\n",
       "-----meta_dataset------\n",
@@ -1704,6 +1724,8 @@
       "Train examples with bad words 1609\n",
       "Test examples with bad words 465\n",
       "Valid examples with bad words 436\n",
+      "Positive bad words 2076\n",
+      "Negatibe bad words 434\n",
       "\n",
       "\n"
      ]
@@ -1717,6 +1739,8 @@
     "    print(\"Train examples with bad words\", results_bad_words_stats[tn][\"train_count\"])\n",
     "    print(\"Test examples with bad words\", results_bad_words_stats[tn][\"test_count\"])\n",
     "    print(\"Valid examples with bad words\", results_bad_words_stats[tn][\"valid_count\"])\n",
+    "    print(\"Positive bad words\", results_bad_words_stats[tn][\"total_pos_count\"])\n",
+    "    print(\"Negatibe bad words\", results_bad_words_stats[tn][\"total_neg_count\"])\n",
     "    \n",
     "    print()\n",
     "    print()"
@@ -1724,7 +1748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
