--- a/example.ipynb
+++ b/example.ipynb
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,12 +866,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "funlines_and_human_microedit_paper_2023 0.3015371283286533\n",
+      "one_liners 1.7070464905516471\n",
+      "onion_or_not 1.5531578533820165\n",
+      "pun_of_the_day 1.3186404388523407\n",
+      "reddit_jokes_last_laught 0.9522269830198586\n",
+      "semeval_2017_task_7 2.289579547088767\n",
+      "semeval_2021_task_7 1.4892347922122675\n",
+      "unfun_me 0.6825822360878226\n",
+      "short_jokes 2.4774768541540944\n",
+      "the_naughtyformer 4.131229668450489\n",
+      "meta_dataset 1.539365412167439\n"
+     ]
+    }
+   ],
    "source": [
-    "# for dh in all_data:\n",
-    "#     print(dh.name, calc_divergence_between_target(copy.deepcopy(dh)))"
+    "for dh in all_data:\n",
+    "    print(dh.name, calc_divergence_between_target(copy.deepcopy(dh)))"
    ]
   },
   {
